prevent table header icons from wrapping
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WDK/trunk@16922 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/View/webapp/wdk/css/wdk3.css
+++ b/View/webapp/wdk/css/wdk3.css
@@ -125,6 +125,10 @@ body {
 
 .wdk-AnswerTable-header {
   display: inline-block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  vertical-align: top;
 }
 
 .wdk-AnswerTable-headerWrapper {
